--- a/RentADriveMobile2/app/src/main/res/layout/activity_register.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_register.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="wrap_content">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         tools:context=".Register">
@@ -16,9 +17,9 @@
             android:id="@+id/userName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
-            android:hint="User Name"
             android:gravity="center_horizontal"
+            android:hint="User Name"
+            android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
@@ -30,39 +31,41 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
             android:gravity="center_horizontal"
             android:hint="password"
-            app:layout_constraintTop_toBottomOf="@+id/userName"
-            android:layout_marginTop="30dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:inputType="textPassword"
+            android:text=""
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:inputType="textPassword"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.277" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
             android:gravity="center_horizontal"
             android:hint="email"
-            app:layout_constraintTop_toBottomOf="@+id/password"
-            android:layout_marginTop="30dp"
+            android:text=""
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.436" />
 
         <EditText
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text=""
-            android:hint="phone"
             android:gravity="center_horizontal"
-            app:layout_constraintTop_toBottomOf="@id/email"
-            android:layout_marginTop="30dp"
-            app:layout_constraintRight_toRightOf="parent"
+            android:hint="phone"
+            android:text=""
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintVertical_bias="0.393" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.585" />
 
         <Button
             android:id="@+id/save"
@@ -72,17 +75,21 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/phone" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.9" />
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/save"
-            android:layout_marginTop="20dp" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/Map"
