--- a/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
@@ -6,51 +6,87 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:layout_gravity="center"
+    android:background="?attr/bgColor"
     >
 
 
     <EditText
         android:id="@+id/loginUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="242dp"
+        android:layout_height="45dp"
+        android:layout_gravity="center"
         android:layout_marginTop="100dp"
+        android:backgroundTint="?attr/EditTextLine"
         android:ems="10"
         android:hint="Email"
         android:inputType="textPersonName"
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/loginPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="238dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:backgroundTint="?attr/EditTextLine"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword"
-        android:paddingTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/loginUser"
+        android:textColor="?attr/textColor"
+
+        android:textColorHint="?attr/metaTextColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:hint="Password"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.244" />
 
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        app:layout_constraintTop_toBottomOf="@id/loginPass"
+        android:backgroundTint="?attr/buttonColor"
         android:paddingTop="20dp"
+        android:text="Login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.351" />
 
     <Button
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
-        app:layout_constraintTop_toBottomOf="@id/login"
+        android:backgroundTint="?attr/buttonColor"
         android:paddingTop="20dp"
+        android:text="Register"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.765" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="156dp"
+        android:layout_height="147dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.565"
+        app:srcCompat="@drawable/rad2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
