--- a/RentADriveMobile2/app/src/main/res/values/styles.xml
+++ b/RentADriveMobile2/app/src/main/res/values/styles.xml
@@ -21,8 +21,8 @@
 <!-- Coloring code for the dark theme-->
     <style name="DarkTheme" parent="AppTheme">
         <item name="textColor">#ffffff</item>
-        <item name="metaTextColor">#aeaeae</item>
-        <item name="bgColor">#797272</item>
+        <item name="metaTextColor">#000000</item>
+        <item name="bgColor">#c4cace</item>
         <item name="buttonColor">#febe03</item>
         <item name="EditTextLine">#000000</item>
     </style>
