--- a/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/loginPass"
         android:layout_width="238dp"
         android:layout_height="43dp"
-        android:layout_gravity="center"
+        android:gravity="center"
         android:backgroundTint="?attr/EditTextLine"
         android:ems="10"
         android:hint="Password"
@@ -33,7 +33,7 @@
         android:id="@+id/loginUser"
         android:layout_width="242dp"
         android:layout_height="40dp"
-        android:layout_gravity="center"
+        android:gravity="center"
         android:layout_marginTop="75dp"
         android:backgroundTint="?attr/EditTextLine"
         android:ems="10"
@@ -53,6 +53,7 @@
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:backgroundTint="?attr/buttonColor"
         android:paddingTop="20dp"
         android:text="Register"
@@ -70,6 +71,7 @@
         android:backgroundTint="?attr/buttonColor"
         android:paddingTop="20dp"
         android:text="Login"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
