--- a/RentADriveMobile2/app/src/main/res/layout/activity_register.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_register.xml
@@ -19,6 +19,11 @@
             android:gravity="center_horizontal"
             android:hint="User Name"
             android:text=""
+            android:textColor="?attr/textColor"
+            android:textColorHint="?attr/metaTextColor"
+            android:textCursorDrawable="?attr/EditTextLine"
+            android:backgroundTint="?attr/EditTextLine"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +37,11 @@
             android:text=""
             android:gravity="center_horizontal"
             android:hint="password"
+            android:textColor="?attr/textColor"
+            android:textColorHint="?attr/metaTextColor"
+            android:textCursorDrawable="?attr/EditTextLine"
+            android:backgroundTint="?attr/EditTextLine"
+
             app:layout_constraintTop_toBottomOf="@+id/userName"
             android:layout_marginTop="30dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -45,6 +55,11 @@
             android:text=""
             android:gravity="center_horizontal"
             android:hint="email"
+            android:textColor="?attr/textColor"
+            android:textColorHint="?attr/metaTextColor"
+            android:textCursorDrawable="?attr/EditTextLine"
+            android:backgroundTint="?attr/EditTextLine"
+
             app:layout_constraintTop_toBottomOf="@+id/password"
             android:layout_marginTop="30dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -57,6 +72,10 @@
             android:text=""
             android:hint="phone"
             android:gravity="center_horizontal"
+            android:textColor="?attr/textColor"
+            android:textColorHint="?attr/metaTextColor"
+            android:textCursorDrawable="?attr/EditTextLine"
+            android:backgroundTint="?attr/EditTextLine"
             app:layout_constraintTop_toBottomOf="@id/email"
             android:layout_marginTop="30dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -69,6 +88,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="Register and Post"
+            android:background="@drawable/round_button"
+            android:backgroundTint="?attr/buttonColor"
+            android:textColor="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +101,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Register and Rent"
+            android:background="@drawable/round_button"
+            android:backgroundTint="?attr/buttonColor"
+            android:textColor="#ffffff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/registerPoster"
