--- a/RentADriveMobile2/app/src/main/res/layout/activity_user_post.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_user_post.xml
@@ -10,9 +10,14 @@
         android:id="@+id/address"
         android:layout_width="407dp"
         android:layout_height="49dp"
+        android:gravity="center_horizontal"
         android:ems="10"
         android:hint="Address"
         android:inputType="textPersonName"
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        android:backgroundTint="?attr/EditTextLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,10 +28,14 @@
         android:id="@+id/description"
         android:layout_width="407dp"
         android:layout_height="50dp"
+        android:gravity="center_horizontal"
         android:ems="10"
-        android:gravity="start|top"
         android:hint="Please enter a description"
         android:inputType="textMultiLine"
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        android:backgroundTint="?attr/EditTextLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +46,14 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:ems="10"
         android:hint="Hourly price"
         android:inputType="textPersonName"
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        android:backgroundTint="?attr/EditTextLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +65,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Post"
+        android:background="@drawable/round_button"
+        android:backgroundTint="?attr/buttonColor"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
