--- a/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
@@ -14,29 +14,29 @@
         android:id="@+id/loginPass"
         android:layout_width="238dp"
         android:layout_height="43dp"
-        android:gravity="center"
         android:backgroundTint="?attr/EditTextLine"
         android:ems="10"
+        android:gravity="center"
         android:hint="Password"
         android:inputType="textPassword"
         android:textColor="?attr/textColor"
-
         android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintVertical_bias="0.565" />
 
     <EditText
         android:id="@+id/loginUser"
         android:layout_width="242dp"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_marginTop="75dp"
         android:backgroundTint="?attr/EditTextLine"
         android:ems="10"
+        android:gravity="center"
         android:hint="Email"
         android:inputType="textPersonName"
         android:textColor="?attr/textColor"
@@ -47,49 +47,50 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.326" />
+        app:layout_constraintVertical_bias="0.373" />
 
     <Button
         android:id="@+id/register"
-        android:background="@drawable/round_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:background="@drawable/round_button"
         android:backgroundTint="?attr/buttonColor"
-        android:paddingTop="20dp"
+        android:gravity="center"
         android:text="Register"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.793" />
+        app:layout_constraintVertical_bias="0.847" />
 
     <Button
-        android:background="@drawable/round_button"
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/round_button"
         android:backgroundTint="?attr/buttonColor"
-        android:paddingTop="20dp"
-        android:text="Login"
         android:gravity="center"
+        android:text="Login"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.683" />
+        app:layout_constraintVertical_bias="0.708" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="401dp"
-        android:layout_height="197dp"
+        android:layout_width="414dp"
+        android:layout_height="214dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.03"
         app:srcCompat="@drawable/rad2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
