--- a/RentADriveMobile2/app/src/main/res/layout/activity_register.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_register.xml
@@ -1,123 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+
+    <EditText
+        android:id="@+id/userName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        tools:context=".Register">
+        android:layout_height="wrap_content"
+        android:backgroundTint="?attr/EditTextLine"
+        android:gravity="center_horizontal"
+        android:hint="User Name"
+        android:text=""
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.109" />
 
-        <EditText
-            android:id="@+id/userName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:hint="User Name"
-            android:text=""
-            android:textColor="?attr/textColor"
-            android:textColorHint="?attr/metaTextColor"
-            android:textCursorDrawable="?attr/EditTextLine"
-            android:backgroundTint="?attr/EditTextLine"
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:backgroundTint="?attr/EditTextLine"
+        android:gravity="center_horizontal"
+        android:hint="password"
+        android:inputType="textPassword"
+        android:text=""
+        android:textColor="?attr/textColor"
 
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.1" />
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userName"
+        app:layout_constraintVertical_bias="0.001" />
 
-        <EditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:gravity="center_horizontal"
-            android:hint="password"
-            android:textColor="?attr/textColor"
-            android:textColorHint="?attr/metaTextColor"
-            android:textCursorDrawable="?attr/EditTextLine"
-            android:backgroundTint="?attr/EditTextLine"
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:backgroundTint="?attr/EditTextLine"
+        android:gravity="center_horizontal"
+        android:hint="email"
+        android:text=""
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
 
-            app:layout_constraintTop_toBottomOf="@+id/userName"
-            android:layout_marginTop="30dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:inputType="textPassword"/>
+        android:textCursorDrawable="?attr/EditTextLine"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/password"
+        app:layout_constraintVertical_bias="0.0" />
 
-        <EditText
-            android:id="@+id/email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:gravity="center_horizontal"
-            android:hint="email"
-            android:textColor="?attr/textColor"
-            android:textColorHint="?attr/metaTextColor"
-            android:textCursorDrawable="?attr/EditTextLine"
-            android:backgroundTint="?attr/EditTextLine"
+    <EditText
+        android:id="@+id/phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:backgroundTint="?attr/EditTextLine"
+        android:gravity="center_horizontal"
+        android:hint="phone"
+        android:text=""
+        android:textColor="?attr/textColor"
+        android:textColorHint="?attr/metaTextColor"
+        android:textCursorDrawable="?attr/EditTextLine"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/email"
+        app:layout_constraintVertical_bias="0.356" />
 
-            app:layout_constraintTop_toBottomOf="@+id/password"
-            android:layout_marginTop="30dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent" />
+    <Button
+        android:id="@+id/registerPoster"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/round_button"
+        android:backgroundTint="?attr/buttonColor"
+        android:text="Register and Post"
+        android:textColor="#ffffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/phone" />
 
-        <EditText
-            android:id="@+id/phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:hint="phone"
-            android:gravity="center_horizontal"
-            android:textColor="?attr/textColor"
-            android:textColorHint="?attr/metaTextColor"
-            android:textCursorDrawable="?attr/EditTextLine"
-            android:backgroundTint="?attr/EditTextLine"
-            app:layout_constraintTop_toBottomOf="@id/email"
-            android:layout_marginTop="30dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintVertical_bias="0.393" />
+    <Button
+        android:id="@+id/registerRenter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/round_button"
+        android:backgroundTint="?attr/buttonColor"
+        android:text="Register and Rent"
+        android:textColor="#ffffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/registerPoster"
+        app:layout_constraintVertical_bias="1.0" />
 
-        <Button
-            android:id="@+id/registerPoster"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Register and Post"
-            android:background="@drawable/round_button"
-            android:backgroundTint="?attr/buttonColor"
-            android:textColor="#ffffff"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/phone" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.705" />
 
-        <Button
-            android:id="@+id/registerRenter"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Register and Rent"
-            android:background="@drawable/round_button"
-            android:backgroundTint="?attr/buttonColor"
-            android:textColor="#ffffff"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/registerPoster"
-            android:layout_marginTop="20dp"/>
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registerRenter"
-            android:layout_marginTop="20dp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
