Places API in progress
Fuck

--- a/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/activity_main.xml
@@ -93,4 +93,16 @@
         app:layout_constraintVertical_bias="0.03"
         app:srcCompat="@drawable/rad2" />
 
+    <Button
+        android:id="@+id/map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MAPS"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.954" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
