Added functionality to the Post Button. Now starts the PostActivity.

--- a/RentADriveMobile2/app/src/main/res/layout/fragment_home.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        layout="@layout/activity_maps">
+    </include>
+
     <TextView
         android:id="@+id/text_home"
         android:layout_width="match_parent"
