--- a/RentADriveMobile2/app/src/main/res/layout/app_bar_navigation.xml
+++ b/RentADriveMobile2/app/src/main/res/layout/app_bar_navigation.xml
@@ -23,11 +23,11 @@
     <include layout="@layout/content_navigation" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/postButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_add_circle_black_24dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
